tests/errors/sem_array3.java
public class sem_array3 {
public static void main(String[] args){
String[] values;
String i = values[ "UyaMcVU" ];
}
}